--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "colors": "^1.4.0",
     "command-line-commands": "^3.0.2",
     "express": "^4.17.2",
-    "shellies": "^1.7.0"
+    "shellies": "^1.7.0",
+    "fakegato-history": "^0.6.3"
   },
   "devDependencies": {
     "eslint": "^8.8.0",
